Fixed and updated the CM UI for Payments by Order, adding in the visible to venues and attach invoice checkboxes.  Improved some naming conventions in the modal so I could use the same code as the regular payments.  Data is correctly making it to the MakePament routine, which is currently stopping with a var_dump and die().  Need to fix a bug with the checkboxes.  Lots of improvements and the first time getting the payment order list up to the ajax call.  Just wanted to get a decent stopping point committed.

--- a/includes/style/scss/thetaste-venue.scss
+++ b/includes/style/scss/thetaste-venue.scss
@@ -8,7 +8,7 @@ $spacers: (
 		(
 			10%,
 		)
-		// 80% -> form inputs became 10% shorter on width from each side,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+		// 80% -> form inputs became 10% shorter on width from each side,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 
 @import "../bootstrap/scss/bootstrap";
@@ -490,7 +490,7 @@ div#profile_edit_form {
 	display: none;
 }
 
-#payment-visibility-checkbox-div {
+.payment-visibility-checkbox-div {
 	display: inline-block;
 	margin-left: 16px;
 
